--- a/index.html
+++ b/index.html
@@ -1,9 +1,108 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Latsamy Xayavong's CV</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            background-color: white;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2 {
+            color: #2a9d8f;
+        }
+        h2 {
+            border-bottom: 2px solid #ddd;
+            padding-bottom: 10px;
+        }
+        p {
+            line-height: 1.6;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        ul li {
+            margin: 10px 0;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
 <body>
-  <h1>Latsamy</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+    <div class="container">
+        <h1>Latsamy Xayavong</h1>
+        <p>Welcome to my personal CV webpage!</p>
 
+        <div class="section">
+            <h2>Personal Information</h2>
+            <p>Email: latsamy@example.com</p>
+            <p>Location: Seoul, South Korea</p>
+        </div>
+
+        <div class="section">
+            <h2>Education</h2>
+            <ul>
+                <li><strong>Ph.D. in Theoretical Physics</strong> - University of XYZ (2021-2024)</li>
+                <li><strong>Master's in Physics</strong> - University of ABC (2019-2021)</li>
+                <li><strong>Bachelor's in Physics</strong> - University of DEF (2015-2019)</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Research Interests</h2>
+            <ul>
+                <li>Radial excitation contributions in nuclear beta decay</li>
+                <li>Nuclear structure and shell model calculations</li>
+                <li>Isospin symmetry breaking in Gamow-Teller transitions</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Professional Experience</h2>
+            <ul>
+                <li><strong>Researcher</strong> - XYZ Institute, Seoul (2021-present)</li>
+                <li><strong>Teaching Assistant</strong> - University of XYZ (2019-2021)</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Publications</h2>
+            <ul>
+                <li>“Constraining theoretical corrections to Gamow-Teller transition rates” – PRC Journal, 2023</li>
+                <li>“Radial excitation and its influence on $\beta$-decay rates” – PRC Journal, 2022</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Skills</h2>
+            <ul>
+                <li>Python, C++, Shell Scripting</li>
+                <li>High-performance computing (HPC)</li>
+                <li>Data analysis and visualization (Matplotlib, Numpy)</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Languages</h2>
+            <ul>
+                <li>English (Fluent)</li>
+                <li>Korean (Intermediate)</li>
+                <li>Lao (Native)</li>
+            </ul>
+        </div>
+    </div>
+</body>
 </html>
